:bug: Overflow only X

--- a/public/resources/css/main.css
+++ b/public/resources/css/main.css
@@ -6,7 +6,7 @@ body {
   font-weight: 300;
   font-size: 17px;
   line-height: 1.5;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 h1 {
